--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Gods</title>
 </head>
 <body>
 	<div>
 		<ul>
 			<li>bricks</li>
 			<li>mortar</li>
+			<li>sand</li>
+			<li>medusa</li>
 		</ul>
 	</div>
 
